--- a/public/index.html
+++ b/public/index.html
@@ -1,71 +1,133 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inventario LDS - Inicio</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inventario IT - Inicio</title>
+    <!--===============================================================-->
+    <!-- Integración de Tailwind CSS desde CDN -->
+    <!-- Para desarrollo rápido. Para producción, usa el proceso de build recomendado. -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!--===============================================================-->
+
+    <!-- Enlace a tu archivo CSS personalizado (opcional) -->
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-
 <body class="bg-gray-100 font-sans">
-  <header class="bg-blue-600 text-white p-4 shadow-md">
-    <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Inventario LDS</h1>
-      <!-- Menú de navegación (Versión escritorio) -->
-      <nav class="hidden md:flex space-x-4">
-        <a href="#" class="hover:underline">Equipos</a>
-        <a href="#" class="hover:underline">Empleados</a>
-        <a href="#" class="hover:underline">Asignaciones</a>
-        <a href="#" class="hover:underline">Usuarios</a>
-        <a href="#" class="hover:underline">Ip's</a>
-        <!-- Más enlaces de menú aquí -->
-        <span class="text-blue-200">|</span> <!-- Separador simple -->
-        <!-- Nombre de usuario logueado / Perfil (placeholder) -->
-        <a href="#" class="hover:underline">Herwing Eduardo (Admin)</a>
-        <button class="hover:underline">Salir</button>
-      </nav>
-      <!-- Botón de menú hamburguesa (Versión móvil) -->
-      <div class="md:hidden">
-        <button id="hamburger-button" class="text-white focus:outline-none">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-4 6h4"></path>
-          </svg>
-        </button>
-      </div>
+    <!--===============================================================-->
+    <!-- Encabezado/Navbar -->
+    <header class="bg-blue-600 text-white p-4 shadow-md">
+        <div class="container mx-auto flex justify-between items-center">
+            <!-- Título del sitio con un data-view para ir a home al hacer clic -->
+            <!-- Añadimos cursor-pointer para indicar que es clickeable -->
+            <h1 class="text-2xl font-bold cursor-pointer" data-view="home">Inventario IT</h1>
+
+            <!-- Menú de navegación (Versión escritorio) -->
+            <nav class="hidden md:flex space-x-4">
+                <!-- Añadimos data-view a los enlaces para indicar la vista a cargar -->
+                <a href="#" class="hover:underline" data-view="equiposList">Equipos</a>
+                <a href="#" class="hover:underline" data-view="empleadosList">Empleados</a>
+                <a href="#" class="hover:underline" data-view="asignacionesList">Asignaciones</a>
+                <a href="#" class="hover:underline" data-view="usuariosList">Usuarios</a>
+                <!-- TODO: Añadir enlaces para otras vistas (IPs, Emails, Mantenimientos, Notas) con sus data-view -->
+                <a href="#" class="hover:underline" data-view="direccionesIpList">Direcciones IP</a>
+                 <a href="#" class="hover:underline" data-view="cuentasEmailList">Cuentas Email</a>
+                 <a href="#" class="hover:underline" data-view="mantenimientosList">Mantenimientos</a>
+                 <a href="#" class="hover:underline" data-view="notasList">Notas</a>
+
+
+                <span class="text-blue-200">|</span> <!-- Separador simple -->
+                 <!-- Nombre de usuario logueado / Perfil (placeholder) -->
+                 <!-- TODO: Implementar lógica real de autenticación y nombre de usuario -->
+                 <a href="#" class="hover:underline" data-view="profile">Herwing Eduardo (Admin)</a>
+                 <!-- TODO: Implementar lógica de logout -->
+                 <button class="hover:underline" data-action="logout">Salir</button>
+            </nav>
+
+            <!-- Botón de menú hamburguesa (Versión móvil) -->
+            <div class="md:hidden">
+                <button id="hamburger-button" class="text-white focus:outline-none">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-4 6h4"></path></svg>
+                </button>
+            </div>
+        </div>
+    </header>
+
+    <!-- Menú desplegable móvil (Inicialmente oculto) -->
+    <div id="mobile-menu" class="md:hidden bg-blue-700 text-white text-center transition-all duration-300 ease-in-out max-h-0 overflow-hidden">
+        <!-- Añadimos data-view a los enlaces móviles -->
+        <a href="#" class="block py-2 px-4 hover:bg-blue-800" data-view="equiposList">Equipos</a>
+        <a href="#" class="block py-2 px-4 hover:bg-blue-800" data-view="empleadosList">Empleados</a>
+        <a href="#" class="block py-2 px-4 hover:bg-blue-800" data-view="asignacionesList">Asignaciones</a>
+        <a href="#" class="block py-2 px-4 hover:bg-blue-800" data-view="usuariosList">Usuarios</a>
+        <!-- TODO: Añadir enlaces para otras vistas en móvil -->
+         <a href="#" class="block py-2 px-4 hover:bg-blue-800" data-view="direccionesIpList">Direcciones IP</a>
+         <a href="#" class="block py-2 px-4 hover:bg-blue-800" data-view="cuentasEmailList">Cuentas Email</a>
+         <a href="#" class="block py-2 px-4 hover:bg-blue-800" data-view="mantenimientosList">Mantenimientos</a>
+         <a href="#" class="block py-2 px-4 hover:bg-blue-800" data-view="notasList">Notas</a>
+
+        <!-- Enlace de perfil y botón de salir en móvil -->
+        <a href="#" class="block py-2 px-4 hover:bg-blue-800 mt-2 border-t border-blue-600" data-view="profile">Herwing Eduardo (Admin)</a>
+        <button class="block w-full text-left py-2 px-4 hover:bg-blue-800" data-action="logout">Salir</button>
     </div>
-  </header>
-
-  <!-- Menú desplegable móvil (Inicialmente oculto) -->
-  <div id="mobile-menu"
-    class="md:hidden bg-blue-700 text-white text-center transition-all duration-300 ease-in-out max-h-0 overflow-hidden">
-    <a href="#" class="block py-2 px-4 hover:bg-blue-800">Equipos</a>
-    <a href="#" class="block py-2 px-4 hover:bg-blue-800">Empleados</a>
-    <a href="#" class="block py-2 px-4 hover:bg-blue-800">Asignaciones</a>
-    <a href="#" class="block py-2 px-4 hover:bg-blue-800">Usuarios</a>
-    <!-- Más enlaces de menú aquí -->
-    <a href="#" class="block py-2 px-4 hover:bg-blue-800 mt-2 border-t border-blue-600">Herwing Eduardo (Admin)</a>
-    <button class="block w-full text-left py-2 px-4 hover:bg-blue-800">Salir</button>
-  </div>
 
 
-  <main class="container mx-auto mt-8 p-6 bg-white rounded-lg shadow-md">
-    <h2 class="text-xl font-semibold text-gray-800 mb-4">Contenido Principal / Dashboard</h2>
-    <p class="text-gray-600">Esta es la sección donde se cargará la lista de equipos, empleados, etc.</p>
-    <!-- Ejemplo: Contenedor donde podríamos cargar una tabla de equipos -->
-    <div id="content-area" class="mt-6">
-      <!-- Aquí se renderizará dinámicamente el contenido con JavaScript -->
-      <p>Cargando...</p>
-    </div>
-  </main>
+    <!--===============================================================-->
+    <!-- Contenido principal -->
+    <main class="container mx-auto mt-8 p-6 bg-white rounded-lg shadow-md">
+        <!-- El contenido dinámico de las vistas se cargará aquí -->
+        <div id="content-area" class="mt-6">
+            <!-- CONTENIDO INICIAL DE LA VISTA HOME -->
+            <!-- Esto será renderizado por JS al inicio -->
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Bienvenido a tu Inventario IT</h2>
+            <p class="text-gray-700 mb-6">Selecciona una opción del menú para empezar a gestionar tus activos.</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- Placeholder cards (ejemplos con data-view-trigger para navegación) -->
+                <!-- Puedes añadir estos data-view-trigger a cualquier elemento clickeable que deba cargar una vista -->
+                <div class="bg-blue-100 p-4 rounded-lg shadow-md">
+                    <h3 class="font-semibold text-blue-800 mb-2">Gestión de Equipos</h3>
+                    <p class="text-blue-700 text-sm">Inventario de computadoras, monitores, impresoras, etc.</p>
+                     <!-- data-view="equiposList" le dice a qué vista navegar -->
+                     <button class="mt-3 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" data-view="equiposList">Ver Equipos</button>
+                </div>
+                 <div class="bg-green-100 p-4 rounded-lg shadow-md">
+                    <h3 class="font-semibold text-green-800 mb-2">Gestión de Empleados</h3>
+                    <p class="text-green-700 text-sm">Información del personal asociado a los activos.</p>
+                     <button class="mt-3 bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700" data-view="empleadosList">Ver Empleados</button>
+                </div>
+                 <div class="bg-purple-100 p-4 rounded-lg shadow-md">
+                    <h3 class="font-semibold text-purple-800 mb-2">Asignaciones y Ubicaciones</h3>
+                    <p class="text-purple-700 text-sm">Rastrea dónde y a quién están asignados los equipos.</p>
+                     <button class="mt-3 bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700" data-view="asignacionesList">Ver Asignaciones</button>
+                </div>
+                <!-- TODO: Añadir más cards para otras secciones si lo deseas -->
+            </div>
+            <!-- FIN CONTENIDO INICIAL DE LA VISTA HOME -->
+        </div>
+    </main>
 
 
-  <footer class="mt-8 p-4 text-center text-gray-600 text-sm">
-    <p>© 2025 Inventario LDS. Todos los derechos reservados.</p>
-  </footer>
-  
-  <script src="/js/main.js"></script>
+    <!--===============================================================-->
+    <!-- Pie de página -->
+    <footer class="mt-8 p-4 text-center text-gray-600 text-sm">
+        <p>© 2023 Inventario IT. Todos los derechos reservados.</p>
+    </footer>
+
+    <!--===============================================================-->
+    <!-- Enlace a tu archivo JavaScript principal como módulo -->
+    <script src="/js/main.js" type="module"></script>
+    <!--===============================================================-->
+
+    <!-- Script básico para el menú hamburguesa (puede quedarse aquí o moverse a main.js) -->
+    <script>
+        // Ya añadimos el listener en main.js para cerrar el menú al navegar.
+        // Este script solo necesita la lógica de alternar la clase al hacer clic en el botón.
+        document.getElementById('hamburger-button').addEventListener('click', function() {
+            const mobileMenu = document.getElementById('mobile-menu');
+            // Toggle between max-h-0 (hidden) and max-h-screen (visible)
+            mobileMenu.classList.toggle('max-h-0');
+            mobileMenu.classList.toggle('max-h-screen');
+        });
+    </script>
 </body>
-
 </html>
