--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventario IT - Inicio</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="bg-gray-100 font-sans">
@@ -54,7 +54,7 @@
             Eduardo (Admin)</a>
         <button class="block w-full text-left py-2 px-4 hover:bg-blue-800" data-action="logout">Salir</button>
     </div>
-    <main class="container mx-auto mt-8 p-6 bg-white rounded-lg shadow-md">
+    <main class="container mx-auto mt-8 p-6 bg-white rounded-lg shadow-md overflow-x-auto">
         <div id="content-area" class="mt-6">
 
         </div>
