feat: update branding and enhance views for better user experience
- Changed the title in index.html to "Inventario - Linea Digital" and added a new logo.
- Updated the home view greeting to remove "LDS" for a more general welcome message.
- Modified the equipment view to include a title and a button for creating new equipment.
- Adjusted button styles for creating new employees to maintain consistency.
- Improved the layout of the IP addresses view by removing unnecessary classes.

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventario IT - Inicio</title>
+    <title>Inventario - Linea Digital</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="./assets/logo-white.svg" type="image/svg+xml">
 </head>
 <body class="bg-gray-100 font-sans">
     <header class="bg-blue-600 text-white p-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold cursor-pointer" data-view="home">Inventario LDS</h1>
+            <a href="#" class="text-2xl font-bold cursor-pointer" data-view="home">
+                <img src="/assets/logo-white.svg" alt="Inventario Linea Digital Logo" class="h-12 inline-block">
+            </a>
             <nav class="hidden md:flex space-x-4">
                 <a href="#" class="hover:underline" data-view="equiposList">Equipos</a>
                 <a href="#" class="hover:underline" data-view="empleadosList">Empleados</a>
@@ -54,6 +57,44 @@
             Eduardo (Admin)</a>
         <button class="block w-full text-left py-2 px-4 hover:bg-blue-800" data-action="logout">Salir</button>
     </div>
+
+    <!-- Sidebar -->
+    <div id="sidebar" class="fixed top-0 left-0 z-40 h-screen w-64 bg-blue-800 text-white transform -translate-x-full transition-transform duration-300 ease-in-out md:translate-x-0 md:static md:h-auto md:w-auto md:bg-transparent md:text-current md:flex-shrink-0">
+        <div class="p-4">
+            <!-- Optional: Add logo or close button for mobile sidebar here -->
+            <nav class="flex flex-col space-y-2 mt-10 md:mt-0 md:space-y-0 md:space-x-4 md:flex-row">
+                <!-- Desktop Nav Links (originally in header) -->
+                <a href="#" class="hover:underline md:hidden" data-view="equiposList">Equipos</a>
+                <a href="#" class="hover:underline md:hidden" data-view="empleadosList">Empleados</a>
+                <a href="#" class="hover:underline md:hidden" data-view="asignacionesList">Asignaciones</a>
+                <a href="#" class="hover:underline md:hidden" data-view="usuariosList">Usuarios</a>
+                <a href="#" class="hover:underline md:hidden" data-view="direccionesIpList">Direcciones IP</a>
+                <a href="#" class="hover:underline md:hidden" data-view="cuentasEmailList">Cuentas Email</a>
+                <a href="#" class="hover:underline md:hidden" data-view="mantenimientosList">Mantenimientos</a>
+                <a href="#" class="hover:underline md:hidden" data-view="notasList">Notas</a>
+                <span class="text-blue-200 md:hidden">|</span>
+                <a href="#" class="hover:underline md:hidden" data-view="profile">Herwing Eduardo (Admin)</a>
+                <button class="hover:underline md:hidden" data-action="logout">Salir</button>
+
+                <!-- Mobile Nav Links (originally in mobile-menu) -->
+                <a href="#" class="block py-2 px-4 hover:bg-blue-700 md:hidden" data-view="equiposList">Equipos</a>
+                <a href="#" class="block py-2 px-4 hover:bg-blue-700 md:hidden" data-view="empleadosList">Empleados</a>
+                <a href="#" class="block py-2 px-4 hover:bg-blue-700 md:hidden" data-view="asignacionesList">Asignaciones</a>
+                <a href="#" class="block py-2 px-4 hover:bg-blue-700 md:hidden" data-view="usuariosList">Usuarios</a>
+                <a href="#" class="block py-2 px-4 hover:bg-blue-700 md:hidden" data-view="direccionesIpList">Direcciones IP</a>
+                <a href="#" class="block py-2 px-4 hover:bg-blue-700 md:hidden" data-view="cuentasEmailList">Cuentas Email</a>
+                <a href="#" class="block py-2 px-4 hover:bg-blue-700 md:hidden" data-view="mantenimientosList">Mantenimientos</a>
+                <a href="#" class="block py-2 px-4 hover:bg-blue-700 md:hidden" data-view="notasList">Notas</a>
+                <a href="#" class="block py-2 px-4 hover:bg-blue-700 mt-2 border-t border-blue-600 md:hidden" data-view="profile">Herwing
+                    Eduardo (Admin)</a>
+                <button class="block w-full text-left py-2 px-4 hover:bg-blue-700 md:hidden" data-action="logout">Salir</button>
+            </nav>
+        </div>
+    </div>
+
+    <!-- Overlay -->
+    <div id="sidebar-overlay" class="fixed inset-0 bg-black opacity-50 z-30 hidden md:hidden"></div>
+
     <main class="container mx-auto mt-8 p-6 bg-white rounded-lg shadow-md overflow-x-auto">
         <div id="content-area" class="mt-6">
 
