--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventario - Linea Digital</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/output.css">
     <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/output.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="./assets/logo-white.svg" type="image/svg+xml">
 </head>
 
@@ -68,7 +68,7 @@
     </header>
 
     <main class="container mx-auto mt-8 p-6 bg-white rounded-lg shadow-md overflow-x-auto">
-        <div id="content-area" class="mt-6">
+        <div id="content-area" class="mt-6 mx-auto w-full max-w-5xl px-4">
 
         </div>
     </main>
