fix: remove unnecessary margin from main container in index.html for improved layout consistency

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         </div>
     </header>
 
-    <main class="container mx-auto mt-8 p-6 bg-white rounded-lg shadow-md overflow-x-auto">
+    <main class="container mx-auto p-6 bg-white rounded-lg shadow-md overflow-x-auto">
         <div id="content-area" class="mt-6 mx-auto w-full max-w-5xl px-4">
 
         </div>
