--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,7 @@
     </header>
 
     <main class="container mx-auto p-6 bg-white rounded-lg shadow-md overflow-x-auto">
-        <div id="content-area" class="mt-6 mx-auto w-full max-w-5xl px-4">
-
+        <div id="content-area" class="mt-6">
         </div>
     </main>
 
