feat: enhance layout responsiveness in index.html and output.css; add new utility classes for height and width, and improve overflow handling

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <img src="/assets/logo-white.svg" alt="Inventario Linea Digital Logo" class="h-10">
         </div>
     </header>
-    <main id="app" class="flex flex-col min-h-0">
+    <main id="app" class="flex flex-col min-h-0 overflow-auto">
         <div id="login-content" class="flex-1 flex items-center justify-center js-hide min-h-0">
             <!-- Aquí se renderiza el formulario de login -->
         </div>
@@ -88,7 +88,7 @@
                 </div>
             </aside>
             <main id="main-content"
-                class="flex-1 min-h-0 overflow-y-auto p-2 md:p-6 bg-white rounded-lg shadow-md js-hide">
+                class="flex-1 min-h-0 overflow-auto p-2 md:p-6 bg-white rounded-lg shadow-md js-hide">
                 <div id="content-area" class="mt-6">
                 </div>
             </main>
